Page now properly displays name of pokemom, pokedex number, and sprite

--- a/src/testbed.html
+++ b/src/testbed.html
@@ -13,8 +13,16 @@
      <header>
     </header>
 
-    <div id="pokemon"></div>
+    <div id="name">
+    </div>
+
+    <div id='sprite'></div>
+
+    <div id="hight"></div>
+    <div id="weight"></div>
 
     <footer>
     </footer>
+
+    <script type="text/javascript" src="../Assets/JS/main.js"></script>
 </body>
