--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-     <title>Pokemon Horoscope</title>
-     <meta charset='UTF-8'>
-     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-     <meta http-equiv='X-UA-Compatible' content='ie=edge'>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- bulma and font awesome link -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+     
+    <title>Pokemon Horoscope</title>
+
 </head>
 <body>
-     <header>
-    </header>
-    <footer>
-    </footer>
+          <section class="hero is-danger">
+                    <div class="hero-body">
+                      <div class="container">
+                        <h1 class="title">
+                          Pokemon Horoscope
+                        </h1>
+                      </div>
+                    </div>
+                  </section>
+     
 </body>
+</html>
