Now displays height and weight of pokemon

--- a/src/testbed.html
+++ b/src/testbed.html
@@ -18,7 +18,7 @@
 
     <div id='sprite'></div>
 
-    <div id="hight"></div>
+    <div id="height"></div>
     <div id="weight"></div>
 
     <footer>
