Now displays horoscope for individual pokemon

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
           </div>
           <!-- horoscope contents -->
           <div class="card-content">
-               <p class="title is-size-7">
+               <p class="title is-size-7" id="horoscope">
                     Daily Horoscope:
                </p>
                <hr>
