--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
      <link rel="stylesheet" href='../Assets/CSS/style.css'>
 
      <title>Pokemon Horoscope</title>
+     <link rel="icon" href="../Assets/images/favicon.ico" type='image/x-icon' />
 
 </head>
 
