--- a/src/testbed.html
+++ b/src/testbed.html
@@ -21,6 +21,7 @@
     <div id="type"></div>
     <div id="height"></div>
     <div id="weight"></div>
+    <button id="evolve">Evolve</button>
 
     <div id="horoscope"></div>
 
