--- a/src/index.html
+++ b/src/index.html
@@ -20,59 +20,60 @@
 </head>
 
 <body>
-     <!-- header -->
-     <section class="hero is-danger">
-          <div class="hero-body">
-               <div class="container">
-                    <h1 class="title">
-                         Pokemon Horoscope
-                    </h1>
-               </div>
-          </div>
-     </section>
-     <!-- search bar for pokemon -->
-     <div class="columns is-mobile">
-          <div class="column">
-            <form id="search">
-               <input class="input is-rounded" type="text" placeholder="Pokemon name" id="pokemonName">
-            </form>
-               <!-- card column left for poke info -->
-               <div class="card">
-                    <div class="card-content">
-                         <p class="title is-size-7" id='name'>
-                              Pokemon name and number:
-                         </p>
-                         <hr>
-                         <p class="subtitle is-size-7" id='type'>
-                              Type:
-                         </p>
-                         <p class="subtitle is-size-7" id='weight'>
-                              Weight:
-                         </p>
-                         <p class="subtitle is-size-7" id='height'>
-                              Height:
-                         </p>
+     <div class="wrapper">
+          <!-- header -->
+          <section class="hero is-danger">
+               <div class="hero-body">
+                    <div class="container">
+                         <h1 class="title">
+                              Pokemon Horoscope
+                         </h1>
                     </div>
                </div>
+          </section>
+          <!-- search bar for pokemon -->
+          <div class="columns is-mobile">
+               <div class="column">
+               <form id="search">
+                    <input class="input is-rounded" type="text" placeholder="Pokemon name" id="pokemonName">
+               </form>
+                    <!-- card column left for poke info -->
+                    <div class="card">
+                         <div class="card-content">
+                              <p class="title is-size-7" id='name'>
+                                   Pokemon name and number:
+                              </p>
+                              <hr>
+                              <p class="subtitle is-size-7" id='type'>
+                                   Type:
+                              </p>
+                              <p class="subtitle is-size-7" id='weight'>
+                                   Weight:
+                              </p>
+                              <p class="subtitle is-size-7" id='height'>
+                                   Height:
+                              </p>
+                         </div>
+                    </div>
+               </div>
+               <!-- img column right of pokemon -->
+               <div class="column" id="sprite"></div>
           </div>
-          <!-- img column right of pokemon -->
-          <div class="column" id="sprite"></div>
-     </div>
-     <!-- card with image of sign-->
-     <div class="card">
-          <div class="card-image">
-               <figure class="image is-4by3">
-                    <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-               </figure>
-          </div>
-          <!-- horoscope contents -->
-          <div class="card-content">
-               <p class="title is-size-7" id="horoscope">
-                    Daily Horoscope:
-               </p>
-               <hr>
-               <p class="subtitle is-size-7">
-               </p>
+          <!-- card with image of sign-->
+          <div class="card">
+               <div class="card-image">
+                    <div class="image is-10x10" id="horoscopeImg">
+                    </div>
+               </div>
+               <!-- horoscope contents -->
+               <div class="card-content">
+                    <p class="title is-size-7" id="horoscope">
+                         Daily Horoscope:
+                    </p>
+                    <hr>
+                    <p class="subtitle is-size-7">
+                    </p>
+               </div>
           </div>
      </div>
 
