Fixed an issue where horoscope call was http instead of https

--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,11 @@
                     </p>
                </div>
           </div>
+
+          <footer>
+               <div class='footer'></div>
+
+          </footer>
      </div>
 
 </body>
