Using new api to fix https issue

--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,7 @@
 
 </body>
 
+<script type="text/javascript" src='../Assets/JS/horoscope.js'></script>
 <script type='text/javascript' src='../Assets/JS/main.js'></script>
 
 </html>
