updated css with some shadow and media breakpoints

--- a/src/index.html
+++ b/src/index.html
@@ -37,22 +37,23 @@
           </section>
           <!-- search bar for pokemon -->
           <div class="columns is-mobile">
-               <div class="column">
 
-                    <!-- card column left for poke info -->
-                    <div class="card">
-                         <div class="card-content">
-                              <p class="title is-size-7" id='name'>
+               <div class="column">
+               
+               <!-- card column left for poke info -->
+               <div class="card" id="rcorners2">
+                    <div class="card-content">
+                              <p class="title is-size-7-mobile is-size-2-desktop" id='name'>
                                    Pokemon name and number:
                               </p>
                               <hr>
-                              <p class="subtitle is-size-7" id='type'>
+                              <p class="subtitle is-size-7-mobile" id='type'>
                                    Type:
                               </p>
-                              <p class="subtitle is-size-7" id='weight'>
+                              <p class="subtitle is-size-7-mobile" id='weight'>
                                    Weight:
                               </p>
-                              <p class="subtitle is-size-7" id='height'>
+                              <p class="subtitle is-size-7-mobile" id='height'>
                                    Height:
                               </p>
                          </div>
@@ -60,6 +61,7 @@
                </div>
                <!-- img column right of pokemon -->
                <div class="column" id="sprite"></div>
+               
           </div>
           <!-- card with image of sign-->
           <div class="card">
