--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
                <!-- card column left for poke info -->
                <div class="card" id="rcorners2">
                     <div class="card-content">
-                              <p class="title is-size-7-mobile is-size-2-desktop" id='name'>
+                              <p class="title is-size-7-mobile is-size-3-desktop" id='name'>
                                    Pokemon name and number:
                               </p>
                               <hr>
@@ -82,9 +82,7 @@
 
           <footer>
                <div class='footer has-text-centered has-text-white-ter'>
-                    <img src="https://img.icons8.com/metro/26/000000/pokeball.png">
-                    DONT STEAL
-                    <img src="https://img.icons8.com/metro/26/000000/pokeball.png"></div>
+                    <img src="https://img.icons8.com/metro/26/000000/pokeball.png">DONT STEAL<img src="https://img.icons8.com/metro/26/000000/pokeball.png"></div>
 
           </footer>
      </div>
