--- a/src/index.html
+++ b/src/index.html
@@ -43,17 +43,17 @@
                <!-- card column left for poke info -->
                <div class="card" id="rcorners2">
                     <div class="card-content">
-                              <p class="title is-size-7-mobile is-size-3-desktop" id='name'>
+                              <p class="title  is-size-3-desktop" id='name'>
                                    Pokemon name and number:
                               </p>
                               <hr>
-                              <p class="subtitle is-size-7-mobile" id='type'>
+                              <p class="subtitle is-size-4-desktop" id='type'>
                                    Type:
                               </p>
-                              <p class="subtitle is-size-7-mobile" id='weight'>
+                              <p class="subtitle is-size-4-desktop" id='weight'>
                                    Weight:
                               </p>
-                              <p class="subtitle is-size-7-mobile" id='height'>
+                              <p class="subtitle is-size-4-desktop" id='height'>
                                    Height:
                               </p>
                          </div>
