forgot to resize footer font whoopsies

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
           </div>
 
           <footer>
-               <div class='footer has-text-centered has-text-white-ter'>
+               <div class='footer  is-size-7 has-text-centered has-text-white-ter'>
                     <img src="https://img.icons8.com/metro/26/000000/pokeball.png">DONT STEAL<img src="https://img.icons8.com/metro/26/000000/pokeball.png"></div>
 
           </footer>
