--- a/src/index.html
+++ b/src/index.html
@@ -44,17 +44,17 @@
                <div class="card" id="rcorners2">
                     <div class="card-content">
                               <p class="title  is-size-3-desktop" id='name'>
-                                   Pokemon name and number:
+                                   <!--- Pokemon name and number -->
                               </p>
                               <hr>
                               <p class="subtitle is-size-4-desktop" id='type'>
-                                   Type:
+                                   <!-- Type -->
                               </p>
                               <p class="subtitle is-size-4-desktop" id='weight'>
-                                   Weight:
+                                   <!-- Weight -->
                               </p>
                               <p class="subtitle is-size-4-desktop" id='height'>
-                                   Height:
+                                   <!-- Height -->>:
                               </p>
                          </div>
                     </div>
@@ -72,7 +72,7 @@
                <!-- horoscope contents -->
                <div class="card-content">
                     <p class="title is-size-7" id="horoscope">
-                         Daily Horoscope:
+                        <!-- Daily Horoscope -->
                     </p>
                     <hr>
                     <p class="subtitle is-size-7">
